--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,11 @@
   <servlet>
   	<servlet-name>DispatcherServlet</servlet-name>
   	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  	<!-- Spring 설정 파일 제공 -->
+  	<init-param>
+  		<param-name>contextConfigLocation</param-name>
+  		<param-value>/WEB-INF/DispatcherServlet-servlet.xml</param-value>
+  	</init-param>
   	<!-- 웹 애플리케이션이 시작할 때 서블릿 객체 생성 -->
   	<load-on-startup>1</load-on-startup>
   </servlet>
